# Nexus

./: .gitignore  Makefile  README.md  mcp.json  pyproject.toml
scripts/: run_evals.py  seed_db.py
src/agents/: base_agent.py  orchestrator.py  rag_agent.py
src/api/: deps.py  main.py  middleware.py  routes.py
src/core/: config.py
