[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "0.1.0"
description = "Nexus — production-grade AI agent platform with MCP servers, RAG, tool use, and CI/CD"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  # Core AI / LLM
  "openai>=1.50.0",         # OpenRouter uses the OpenAI-compatible API
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",

  # MCP
  "mcp>=1.0.0",

  # API
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "sse-starlette>=2.1.0",

  # Vector DB & Embeddings
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",

  # Config & Env
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",

  # Observability
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "structlog>=24.2.0",

  # Utilities
  "tenacity>=8.3.0",
  "tiktoken>=0.7.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
